--- a/game.html
+++ b/game.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game page</title>
+    <link rel="stylesheet" href="/assignment-2---css-games-group-8/styles/style.css">
 </head>
 <body>
-    
+    <nav> 
+        <ul>
+            <li class="inline"><a href="index.html">Home</a></li>
+            <li class="inline"><a href="game.html">Game</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
