--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li class="inline"><a href="game.html">Game</a></li>
         </ul>
     </nav>
+    <header>
+        <h1>Sustainability Goal 15</h1>
+    </header>
 
     <p>text text text</p>
 </body>
