Added the front page introducing the un goal

--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
-    <link rel="stylesheet" href="/assignment-2---css-games-group-8/styles/style.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="/assignment-2---css-games-group-8/styles/style.css"
+    />
+  </head>
 
-<body>
+  <body>
     <nav>
-        <ul>
-            <li class="inline"><a href="index.html">Home</a></li>
-            <li class="inline"><a href="game.html">Game</a></li>
-        </ul>
+      <ul>
+        <li class="inline"><a href="index.html">Home</a></li>
+        <li class="inline"><a href="game.html">Game</a></li>
+      </ul>
     </nav>
     <header>
-        <h1>Sustainability Goal 15</h1>
+      <h1>Sustainability Goal 15</h1>
     </header>
 
-    <p>text text text</p>
-</body>
+    <h2>Welcome to our website dedicated to UN Goal 15: Life on Land</h2>
+    <p>
+      UN Goal 15 focuses on protecting, restoring and promoting the sustainable
+      use of terrestrial ecosystems, and their biodiversity. It highlights the
+      importance of preserving the natural resources that sustain life on Earth,
+      including forests, wetlands, and other ecosystems.
+    </p>
+    <p>
+      Through this goal, the UN aims to achieve a world where people and nature
+      can coexist in harmony, and where biodiversity is conserved for the
+      benefit of current and future generations.
+    </p>
+    <p>
+      On our website, we will explore the key issues and challenges related to
+      UN Goal 15, as well as showcase the initiatives and solutions that are
+      helping to achieve this important goal. Join us on this journey towards a
+      more sustainable future for all.
+    </p>
+  </body>
 </html>
