--- a/game.html
+++ b/game.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game page</title>
-    <link rel="stylesheet" href="/assignment-2---css-games-group-8/styles/style.css">
-</head>
-<body>
-    <nav> 
-        <ul>
-            <li class="inline"><a href="index.html">Home</a></li>
-            <li class="inline"><a href="game.html">Game</a></li>
-        </ul>
+    <link
+      rel="stylesheet"
+      href="/assignment-2---css-games-group-8/styles/style.css"
+    />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li class="inline"><a href="index.html">Home</a></li>
+        <li class="inline"><a href="game.html">Game</a></li>
+      </ul>
     </nav>
-</body>
+    <header>
+      <h1>Endangered Animals | Can You Name Them All</h1>
+    </header>
+    <main>
+      <h2>What animals is this</h2>
+      <img
+        src="images/pixelated-tiger.png"
+        alt="A pixer of a tiger pixelated"
+      />
+    </main>
+    <div class="container">
+      <div class="box">
+        <div class="content"><p>Lion</p></div>
+        <div class="answer"><p>Wrong, this is not a lion.</p></div>
+      </div>
+      <div class="box">
+        <div class="content"><p>Tiger</p></div>
+        <div class="answer"><p>Correct, this is the Sunda Island tiger. Which is sadly Endangered. Estimates estimated that there is only 
+            400 left.</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="content"><p>Cheetah</p></div>
+        <div class="answer"><p>Wrong, this is not a cheetah.</p></div>
+      </div>
+      <div class="box">
+        <div class="content"><p>Leopard</p></div>
+        <div class="answer"><p>Wrong, this not a leopard.</p></div>
+      </div>
+      </div>
+    </div>
+  </body>
 </html>
