--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
       </div>
       <div class="box">
         <div class="content"><p>Tiger</p></div>
-        <div class="answer"><p>Correct, this is the Sunda Island tiger. Which is sadly Endangered. Estimates estimated that there is only 
+        <div class="answer"><p class="correct-answer">Correct, this is the Sunda Island tiger. Which is sadly endangered. Estimates estimated that there is only 
             400 left.</p>
         </div>
       </div>
