Added javascript to the game

--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="/assignment-2---css-games-group-8/styles/style.css"
     />
+    <script src="script.js" async></script>
   </head>
   <body>
     <nav>
@@ -32,10 +33,13 @@
         <div class="content"><p>Lion</p></div>
         <div class="answer"><p>Wrong, this is not a lion.</p></div>
       </div>
-      <div class="box">
+      <div class="box correct">
         <div class="content"><p>Tiger</p></div>
-        <div class="answer"><p class="correct-answer">Correct, this is the Sunda Island tiger. Which is sadly endangered. Estimates estimated that there is only 
-            400 left.</p>
+        <div class="answer">
+          <p class="correct-answer">
+            Correct, this is the Sunda Island tiger. Which is sadly endangered.
+            There is only 400 left.
+          </p>
         </div>
       </div>
       <div class="box">
@@ -45,7 +49,6 @@
       <div class="box">
         <div class="content"><p>Leopard</p></div>
         <div class="answer"><p>Wrong, this not a leopard.</p></div>
-      </div>
       </div>
     </div>
   </body>
