Added a second question to the game

--- a/game.html
+++ b/game.html
@@ -21,13 +21,13 @@
     <header>
       <h1>Endangered Animals | Can You Name Them All</h1>
     </header>
-    <main>
+    <div class="question">
       <h2>What animals is this</h2>
       <img
         src="images/pixelated-tiger.png"
-        alt="A pixer of a tiger pixelated"
+        alt="A picture of a tiger pixelated"
       />
-    </main>
+    </div>
     <div class="container">
       <div class="box">
         <div class="content"><p>Lion</p></div>
@@ -49,6 +49,41 @@
       <div class="box">
         <div class="content"><p>Leopard</p></div>
         <div class="answer"><p>Wrong, this not a leopard.</p></div>
+      </div>
+    </div>
+
+    <div class="question" style="margin-top: 100px">
+      <h2>What animals is this</h2>
+      <img
+        src="images/pixelated-rhino.png"
+        alt="A picture of a tiger pixelated"
+      />
+    </div>
+    <div class="container">
+      <div class="box">
+        <div class="content"><p>Panda</p></div>
+        <div class="answer"><p>Wrong, this is not a panda.</p></div>
+      </div>
+
+      <div class="box correct">
+        <div class="content"><p>Rhino</p></div>
+        <div class="answer">
+          <p class="correct-answer">
+            This is the Javan rhino. It is critically endangered. Only 67 remain
+          </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="content"><p>Gorilla</p></div>
+        <div class="answer"><p>Wrong, this is not a gorilla.</p></div>
+      </div>
+
+      <div class="box">
+        <div class="content"><p>Elephant</p></div>
+        <div class="answer">
+          <p>wrong this is not an elephant</p>
+        </div>
       </div>
     </div>
   </body>
