--- a/index.html
+++ b/index.html
@@ -22,23 +22,34 @@
       <h1>Sustainability Goal 15</h1>
     </header>
 
-    <h2>Welcome to our website dedicated to UN Goal 15: Life on Land</h2>
-    <p>
-      UN Goal 15 focuses on protecting, restoring and promoting the sustainable
-      use of terrestrial ecosystems, and their biodiversity. It highlights the
-      importance of preserving the natural resources that sustain life on Earth,
-      including forests, wetlands, and other ecosystems.
-    </p>
-    <p>
-      Through this goal, the UN aims to achieve a world where people and nature
-      can coexist in harmony, and where biodiversity is conserved for the
-      benefit of current and future generations.
-    </p>
-    <p>
-      On our website, we will explore the key issues and challenges related to
-      UN Goal 15, as well as showcase the initiatives and solutions that are
-      helping to achieve this important goal. Join us on this journey towards a
-      more sustainable future for all.
-    </p>
+    <main>
+      <h2>Welcome to our website dedicated to UN Goal 15: Life on Land</h2>
+      <div class="box">
+        <p>
+          UN Goal 15 focuses on protecting, restoring and promoting the
+          sustainable use of terrestrial ecosystems, and their biodiversity. It
+          highlights the importance of preserving the natural resources that
+          sustain life on Earth, including forests, wetlands, and other
+          ecosystems.
+        </p>
+      </div>
+
+      <div class="box">
+        <p>
+          Through this goal, the UN aims to achieve a world where people and
+          nature can coexist in harmony, and where biodiversity is conserved for
+          the benefit of current and future generations.
+        </p>
+      </div>
+
+      <div class="box">
+        <p>
+          On the game page, you find a quiz that teaches you about animals that
+          are endangered and what you can do to save the enviroment to save the
+          animals. Join us on this journey towards a more sustainable future for
+          all.
+        </p>
+      </div>
+    </main>
   </body>
 </html>
