Working on the win screen fixed some bugs

--- a/game.html
+++ b/game.html
@@ -86,5 +86,10 @@
         </div>
       </div>
     </div>
+
+    <div class="win-screen">
+      <h1>You Win</h1>
+      <p>You have answered all the questions correctly, congratulations!</p>
+    </div>
   </body>
 </html>
