Win condition works, but lacks fail condition

--- a/game.html
+++ b/game.html
@@ -69,7 +69,8 @@
         <div class="content"><p>Rhino</p></div>
         <div class="answer">
           <p class="correct-answer">
-            This is the Javan rhino. It is critically endangered. Only 67 remain
+            This is the Javan rhino. It is critically endangered. Only 67
+            remain.
           </p>
         </div>
       </div>
@@ -91,5 +92,6 @@
       <h1>You Win</h1>
       <p>You have answered all the questions correctly, congratulations!</p>
     </div>
+    
   </body>
 </html>
