Added 1 more questions to game

--- a/game.html
+++ b/game.html
@@ -22,12 +22,13 @@
       <h1>Endangered Animals | Can You Name Them All</h1>
     </header>
     <div class="question">
-      <h2>What animals is this</h2>
+      <h2>What animal is this?</h2>
       <img
         src="images/pixelated-tiger.png"
         alt="A picture of a tiger pixelated"
       />
     </div>
+
     <div class="container">
       <div class="box">
         <div class="content"><p>Lion</p></div>
@@ -53,25 +54,59 @@
     </div>
 
     <div class="question" style="margin-top: 100px">
-      <h2>What animals is this</h2>
+      <h2>What animal is this?</h2>
       <img
         src="images/pixelated-rhino.png"
-        alt="A picture of a tiger pixelated"
+        alt="A picture of a rhino pixelated"
       />
     </div>
+
     <div class="container">
       <div class="box">
-        <div class="content"><p>Panda</p></div>
-        <div class="answer"><p>Wrong, this is not a panda.</p></div>
+        <div class="content"><p>Tapir</p></div>
+        <div class="answer"><p>Wrong, this is not a tapir.</p></div>
       </div>
 
       <div class="box correct">
         <div class="content"><p>Rhino</p></div>
         <div class="answer">
           <p class="correct-answer">
-            This is the Javan rhino. It is critically endangered. Only 67
-            remain.
+            This is the Javan rhino. It is critically endangered. Only 67 remain
           </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="content"><p>Hippo</p></div>
+        <div class="answer"><p>Wrong, this is not a hippo.</p></div>
+      </div>
+
+      <div class="box">
+        <div class="content"><p>Walrus</p></div>
+        <div class="answer">
+          <p>wrong this is not a walrus</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="question" style="margin-top: 100px">
+      <h2>What animal is this?</h2>
+      <img
+        src="images/pixelated-elephant.png"
+        alt="A picture of a elephant pixelated"
+      />
+    </div>
+
+    <div class="container">
+      <div class="box">
+        <div class="content"><p>Panda</p></div>
+        <div class="answer"><p>Wrong, this is not a panda.</p></div>
+      </div>
+
+      <div class="box">
+        <div class="content"><p>Rhino</p></div>
+        <div class="answer">
+          <p class="correct-answer">Wrong, this is not a rhino.</p>
         </div>
       </div>
 
@@ -80,10 +115,14 @@
         <div class="answer"><p>Wrong, this is not a gorilla.</p></div>
       </div>
 
-      <div class="box">
+      <div class="box correct">
         <div class="content"><p>Elephant</p></div>
         <div class="answer">
-          <p>wrong this is not an elephant</p>
+          <p class="correct-answer">
+            This is the african forest elephant. Following population declines
+            over several decades due to poaching for ivory and loss of habitat,
+            the African forest elephant is now listed as critically endangered.
+          </p>
         </div>
       </div>
     </div>
@@ -92,6 +131,5 @@
       <h1>You Win</h1>
       <p>You have answered all the questions correctly, congratulations!</p>
     </div>
-    
   </body>
 </html>
