--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     <header>
-      <h1>Endangered Animals | Can You Name Them All</h1>
+      <h1>Endangered Animals | Can You Name Them All?</h1>
     </header>
     <div class="question">
       <h2>What animal is this?</h2>
