Fixed some bugs from mergin 2 branches

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
       <h2>Welcome to our website dedicated to UN Goal 15: Life on Land</h2>
-      <div class="box">
+      <div class="section">
         <p>
           UN Goal 15 focuses on protecting, restoring and promoting the
           sustainable use of terrestrial ecosystems, and their biodiversity. It
@@ -34,7 +34,7 @@
         </p>
       </div>
 
-      <div class="box">
+      <div class="section">
         <p>
           Through this goal, the UN aims to achieve a world where people and
           nature can coexist in harmony, and where biodiversity is conserved for
@@ -42,7 +42,7 @@
         </p>
       </div>
 
-      <div class="box">
+      <div class="section">
         <p>
           On the game page, you find a quiz that teaches you about animals that
           are endangered and what you can do to save the enviroment to save the
