--- a/game.html
+++ b/game.html
@@ -106,7 +106,7 @@
       <div class="box">
         <div class="content"><p>Rhino</p></div>
         <div class="answer">
-          <p class="correct-answer">Wrong, this is not a rhino.</p>
+          <p>Wrong, this is not a rhino.</p>
         </div>
       </div>
 
