Changed names of classes to the BEM method

--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li class="inline"><a href="index.html">Home</a></li>
-        <li class="inline"><a href="game.html">Game</a></li>
+    <nav class="site-nav">
+      <ul class="site-nav__list">
+        <li class="site-nav__item">
+          <a href="index.html" class="site-nav__link">Home</a>
+        </li>
+        <li class="site-nav__item">
+          <a href="game.html" class="site-nav__link">Game</a>
+        </li>
       </ul>
     </nav>
-    <header>
-      <h1>Sustainability Goal 15</h1>
+    <header class="site-header">
+      <h1 class="site-header__title">Sustainability Goal 15</h1>
     </header>
 
-    <main>
-      <h2>Welcome to our website dedicated to UN Goal 15: Life on Land</h2>
-      <div class="section">
-        <p>
+    <main class="site-main">
+      <h2 class="site-main__subtitle">
+        Welcome to our website dedicated to UN Goal 15: Life on Land
+      </h2>
+      <div class="site-main__section">
+        <p class="site-main__text">
           UN Goal 15 focuses on protecting, restoring and promoting the
           sustainable use of terrestrial ecosystems, and their biodiversity. It
           highlights the importance of preserving the natural resources that
@@ -34,18 +40,18 @@
         </p>
       </div>
 
-      <div class="section">
-        <p>
+      <div class="site-main__section">
+        <p class="site-main__text">
           Through this goal, the UN aims to achieve a world where people and
           nature can coexist in harmony, and where biodiversity is conserved for
           the benefit of current and future generations.
         </p>
       </div>
 
-      <div class="section">
-        <p>
+      <div class="site-main__section">
+        <p class="site-main__text">
           On the game page, you find a quiz that teaches you about animals that
-          are endangered and what you can do to save the enviroment to save the
+          are endangered and what you can do to save the environment to save the
           animals. Join us on this journey towards a more sustainable future for
           all.
         </p>
