--- a/game.html
+++ b/game.html
@@ -4,121 +4,154 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game page</title>
+    <title class="page-title">Game page</title>
     <link
       rel="stylesheet"
       href="/assignment-2---css-games-group-8/styles/style.css"
     />
     <script src="script.js" async></script>
   </head>
-  <body>
-    <nav>
-      <ul>
-        <li class="inline"><a href="index.html">Home</a></li>
-        <li class="inline"><a href="game.html">Game</a></li>
-      </ul>
-    </nav>
-    <header>
-      <h1>Endangered Animals | Can You Name Them All?</h1>
+  <body class="page">
+    <nav class="site-nav">
+        <ul class="site-nav__list">
+          <li class="site-nav__item">
+            <a href="index.html" class="site-nav__link">Home</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="game.html" class="site-nav__link">Game</a>
+          </li>
+        </ul>
+      </nav>
+    <header class="header">
+      <h1 class="header__title">Endangered Animals | Can You Name Them All?</h1>
     </header>
-    <div class="question">
-      <h2>What animal is this?</h2>
+
+    <!-- ------------------ Question 1 ------------------ -->
+    <div class="question question--first">
+      <h2 class="question__title">What animal is this?</h2>
       <img
         src="images/pixelated-tiger.png"
         alt="A picture of a tiger pixelated"
+        class="question__image"
       />
     </div>
 
     <div class="container">
-      <div class="box">
-        <div class="content"><p>Lion</p></div>
-        <div class="answer"><p>Wrong, this is not a lion.</p></div>
-      </div>
-      <div class="box correct">
-        <div class="content"><p>Tiger</p></div>
-        <div class="answer">
-          <p class="correct-answer">
-            Correct, this is the Sunda Island tiger. Which is sadly endangered.
-            There is only 400 left.
-          </p>
+        <div class="box">
+          <div class="box__content">
+            <p class="box__text">Lion</p>
+          </div>
+          <div class="box__answer">
+            <p class="box__answer-text">Wrong, this is not a lion.</p>
+          </div>
         </div>
-      </div>
-      <div class="box">
-        <div class="content"><p>Cheetah</p></div>
-        <div class="answer"><p>Wrong, this is not a cheetah.</p></div>
-      </div>
-      <div class="box">
-        <div class="content"><p>Leopard</p></div>
-        <div class="answer"><p>Wrong, this not a leopard.</p></div>
+        <div class="box box--correct">
+          <div class="box__content">
+            <p class="box__text">Tiger</p>
+          </div>
+          <div class="box__answer">
+            <p class="box__answer-text box__answer-text--correct">
+              Correct, this is the Sunda Island tiger. Which is sadly endangered.
+              There is only 400 left.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box__content">
+            <p class="box__text">Cheetah</p>
+          </div>
+          <div class="box__answer">
+            <p class="box__answer-text">Wrong, this is not a cheetah.</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box__content">
+            <p class="box__text">Leopard</p>
+          </div>
+          <div class="box__answer">
+            <p class="box__answer-text">Wrong, this not a leopard.</p>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="question" style="margin-top: 100px">
-      <h2>What animal is this?</h2>
+    <!-- ------------------ Question 2 ------------------ -->
+    <div class="question question--second">
+      <h2 class="question__title">What animal is this?</h2>
       <img
         src="images/pixelated-rhino.png"
         alt="A picture of a rhino pixelated"
+        class="question__image"
       />
     </div>
 
     <div class="container">
-      <div class="box">
-        <div class="content"><p>Tapir</p></div>
-        <div class="answer"><p>Wrong, this is not a tapir.</p></div>
-      </div>
-
-      <div class="box correct">
-        <div class="content"><p>Rhino</p></div>
-        <div class="answer">
-          <p class="correct-answer">
-            This is the Javan rhino. It is critically endangered. Only 67 remain
-          </p>
+        <div class="box">
+          <div class="box__content">
+            <p class="box__text">Tapir</p>
+          </div>
+          <div class="box__answer">
+            <p class="box__answer-text">Wrong, this is not a tapir.</p>
+          </div>
+        </div>
+        <div class="box box--correct">
+          <div class="box__content"><p>Rhino</p></div>
+          <div class="box__answer">
+            <p class="box__answer-text box__answer-text--correct">
+              This is the Javan rhino. It is critically endangered. Only 67
+              remain.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box__content"><p>Hippo</p></div>
+          <div class="box__answer">
+            <p class="box__answer-text">Wrong, this is not a hippo.</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box__content"><p>Walrus</p></div>
+          <div class="box__answer">
+            <p class="box__answer-text">Wrong, this is not a walrus.</p>
+          </div>
         </div>
       </div>
 
-      <div class="box">
-        <div class="content"><p>Hippo</p></div>
-        <div class="answer"><p>Wrong, this is not a hippo.</p></div>
+    <!-- ------------------ Question 3 ------------------ -->
+      <div class="question question--third" style="margin-top: 100px">
+        <h2 class="question__title">What animal is this?</h2>
+        <img
+          src="images/pixelated-elephant.png"
+          alt="A picture of a elephant pixelated"
+          class="question__image"
+        />
       </div>
-
-      <div class="box">
-        <div class="content"><p>Walrus</p></div>
-        <div class="answer">
-          <p>wrong this is not a walrus</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="question" style="margin-top: 100px">
-      <h2>What animal is this?</h2>
-      <img
-        src="images/pixelated-elephant.png"
-        alt="A picture of a elephant pixelated"
-      />
-    </div>
 
     <div class="container">
       <div class="box">
-        <div class="content"><p>Panda</p></div>
-        <div class="answer"><p>Wrong, this is not a panda.</p></div>
-      </div>
-
-      <div class="box">
-        <div class="content"><p>Rhino</p></div>
-        <div class="answer">
-          <p>Wrong, this is not a rhino.</p>
+        <div class="box__content"><p class="box__content-text">Panda</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a panda.</p>
         </div>
       </div>
-
       <div class="box">
-        <div class="content"><p>Gorilla</p></div>
-        <div class="answer"><p>Wrong, this is not a gorilla.</p></div>
+        <div class="box__content"><p class="box__content-text">Rhino</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a rhino.</p>
+        </div>
       </div>
-
-      <div class="box correct">
-        <div class="content"><p>Elephant</p></div>
-        <div class="answer">
-          <p class="correct-answer">
+      <div class="box">
+        <div class="box__content"><p class="box__content-text">Gorilla</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a gorilla.</p>
+        </div>
+      </div>
+      <div class="box box--correct">
+        <div class="box__content">
+          <p class="box__content-text">Elephant</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text box__answer-text--correct">
             This is the african forest elephant. Following population declines
             over several decades due to poaching for ivory and loss of habitat,
             the African forest elephant is now listed as critically endangered.
@@ -128,8 +161,20 @@
     </div>
 
     <div class="win-screen">
-      <h1>You Win</h1>
-      <p>You have answered all the questions correctly, congratulations!</p>
+      <h1 class="win-screen__heading">You Win</h1>
+      <p class="win-screen__message">
+        You have answered all the questions correctly, congratulations!
+      </p>
+      <p class="win-screen__message">
+        Go to
+        <a
+          href="https://sdgs.un.org/goals/goal15"
+          target="_blank"
+          class="win-screen__link"
+          >UN goal 15</a
+        >
+        to learn more about what you can do to help the environment.
+      </p>
     </div>
   </body>
 </html>
