--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title class="page-title">Game page</title>
+    <title>Game page</title>
     <link
       rel="stylesheet"
       href="/assignment-2---css-games-group-8/styles/style.css"
