Small fix to the win screen

--- a/game.html
+++ b/game.html
@@ -118,7 +118,7 @@
       </div>
 
     <!-- ------------------ Question 3 ------------------ -->
-      <div class="question question--third" style="margin-top: 100px">
+      <div class="question question--third">
         <h2 class="question__title">What animal is this?</h2>
         <img
           src="images/pixelated-elephant.png"
