Added 1 more question to the game

--- a/game.html
+++ b/game.html
@@ -160,6 +160,52 @@
       </div>
     </div>
 
+    <!-- ------------------ Question 4 ------------------ -->
+    <div class="question question--fourth">
+      <h2 class="question__title">What animal is this?</h2>
+      <img
+        src="images/pixelated-turtle.png"
+        alt="A picture of a turtle pixelated"
+        class="question__image"
+      />
+    </div>
+
+    <div class="container">
+      <div class="box box--correct">
+        <div class="box__content">
+          <p class="box__content-text">Turtle</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text box__answer-text--correct">
+            Correct, this is the hawksbill turtle. 
+            A major threat to hawksbill turtles is the loss of nesting habitat and coral reefs due to coastal development, 
+            rising seas from climate change, and pollution.
+          </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="box__content"><p class="box__content-text">Tortoise</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a tortoise.</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="box__content"><p class="box__content-text">Rhino</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a rhino.</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box__content"><p class="box__content-text">Gorilla</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a gorilla.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- ------------------ win screen ------------------ -->
     <div class="win-screen">
       <h1 class="win-screen__heading">You Win</h1>
       <p class="win-screen__message">
