Tried adding a fail state if incorrect guess

--- a/game.html
+++ b/game.html
@@ -192,15 +192,15 @@
       </div>
 
       <div class="box">
-        <div class="box__content"><p class="box__content-text">Rhino</p></div>
+        <div class="box__content"><p class="box__content-text">Armadillo</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a rhino.</p>
+          <p class="box__answer-text">Wrong, this is not a armadillo.</p>
         </div>
       </div>
       <div class="box">
-        <div class="box__content"><p class="box__content-text">Gorilla</p></div>
+        <div class="box__content"><p class="box__content-text">Terrapin</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a gorilla.</p>
+          <p class="box__answer-text">Wrong, this is not a terrapin.</p>
         </div>
       </div>
     </div>
@@ -222,5 +222,25 @@
         to learn more about what you can do to help the environment.
       </p>
     </div>
+
+    <!-- ------------------ lose screen ------------------ -->
+    <div class="lose-screen">
+      <h1 class="lose-screen__heading">You Lose</h1>
+      <p class="lose-screen__message">
+        You have answered 3 question wrongs, do you wanna try again?
+      </p>
+      <p class="lose-screen__message">
+        Go to
+        <a
+          href="https://sdgs.un.org/goals/goal15"
+          target="_blank"
+          class="lose-screen__link"
+          >UN goal 15</a
+        >
+        to learn more about what you can do to help the environment.
+      </p>
+    </div>
+
+
   </body>
 </html>
