Fixed some issues with the game and the sass

--- a/game.html
+++ b/game.html
@@ -13,18 +13,33 @@
   </head>
   <body class="page">
     <nav class="site-nav">
-        <ul class="site-nav__list">
-          <li class="site-nav__item">
-            <a href="index.html" class="site-nav__link">Home</a>
-          </li>
-          <li class="site-nav__item">
-            <a href="game.html" class="site-nav__link">Game</a>
-          </li>
-        </ul>
-      </nav>
+      <ul class="site-nav__list">
+        <li class="site-nav__item">
+          <a href="index.html" class="site-nav__link">Home</a>
+        </li>
+        <li class="site-nav__item">
+          <a href="game.html" class="site-nav__link">Game</a>
+        </li>
+      </ul>
+    </nav>
     <header class="header">
       <h1 class="header__title">Endangered Animals | Can You Name Them All?</h1>
     </header>
+
+    <!-- How To Play -->
+    <h2>How To Play</h2>
+    <div class="intro">
+      <p>
+        This is a simple quiz game where you hover over the answer you think is
+        correct with your mouse to answer the questions!
+      </p>
+      <p>
+        Be careful, hovering over the wrong answer will count as a incorrect
+        guess and might lose you the game
+      </p>
+      <p>Be careful that you are sure you're hovering over the right option!</p>
+      <p>Good luck!</p>
+    </div>
 
     <!-- ------------------ Question 1 ------------------ -->
     <div class="question question--first">
@@ -37,40 +52,39 @@
     </div>
 
     <div class="container">
-        <div class="box">
-          <div class="box__content">
-            <p class="box__text">Lion</p>
-          </div>
-          <div class="box__answer">
-            <p class="box__answer-text">Wrong, this is not a lion.</p>
-          </div>
+      <div class="box">
+        <div class="box__content">
+          <p class="box__text">Lion</p>
         </div>
-        <div class="box box--correct">
-          <div class="box__content">
-            <p class="box__text">Tiger</p>
-          </div>
-          <div class="box__answer">
-            <p class="box__answer-text box__answer-text--correct">
-              Correct, this is the Sunda Island tiger. Which is sadly endangered.
-              There is only 400 left.
-            </p>
-          </div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a lion.</p>
         </div>
-        <div class="box">
-          <div class="box__content">
-            <p class="box__text">Cheetah</p>
-          </div>
-          <div class="box__answer">
-            <p class="box__answer-text">Wrong, this is not a cheetah.</p>
-          </div>
+      </div>
+      <div class="box box--correct">
+        <div class="box__content">
+          <p class="box__text">Tiger</p>
         </div>
-        <div class="box">
-          <div class="box__content">
-            <p class="box__text">Leopard</p>
-          </div>
-          <div class="box__answer">
-            <p class="box__answer-text">Wrong, this not a leopard.</p>
-          </div>
+        <div class="box__answer">
+          <p class="box__answer-text box__answer-text--correct">
+            Correct, this is the Sunda Island tiger. Which is sadly endangered.
+            There is only 400 left.
+          </p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box__content">
+          <p class="box__text">Cheetah</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a cheetah.</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box__content">
+          <p class="box__text">Leopard</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this not a leopard.</p>
         </div>
       </div>
     </div>
@@ -86,46 +100,46 @@
     </div>
 
     <div class="container">
-        <div class="box">
-          <div class="box__content">
-            <p class="box__text">Tapir</p>
-          </div>
-          <div class="box__answer">
-            <p class="box__answer-text">Wrong, this is not a tapir.</p>
-          </div>
+      <div class="box">
+        <div class="box__content">
+          <p class="box__text">Tapir</p>
         </div>
-        <div class="box box--correct">
-          <div class="box__content"><p>Rhino</p></div>
-          <div class="box__answer">
-            <p class="box__answer-text box__answer-text--correct">
-              This is the Javan rhino. It is critically endangered. Only 67
-              remain.
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="box__content"><p>Hippo</p></div>
-          <div class="box__answer">
-            <p class="box__answer-text">Wrong, this is not a hippo.</p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="box__content"><p>Walrus</p></div>
-          <div class="box__answer">
-            <p class="box__answer-text">Wrong, this is not a walrus.</p>
-          </div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a tapir.</p>
         </div>
       </div>
+      <div class="box box--correct">
+        <div class="box__content"><p>Rhino</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text box__answer-text--correct">
+            This is the Javan rhino. It is critically endangered. Only 67
+            remain.
+          </p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box__content"><p>Hippo</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a hippo.</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box__content"><p>Walrus</p></div>
+        <div class="box__answer">
+          <p class="box__answer-text">Wrong, this is not a walrus.</p>
+        </div>
+      </div>
+    </div>
 
     <!-- ------------------ Question 3 ------------------ -->
-      <div class="question question--third">
-        <h2 class="question__title">What animal is this?</h2>
-        <img
-          src="images/pixelated-elephant.png"
-          alt="A picture of a elephant pixelated"
-          class="question__image"
-        />
-      </div>
+    <div class="question question--third">
+      <h2 class="question__title">What animal is this?</h2>
+      <img
+        src="images/pixelated-elephant.png"
+        alt="A picture of a elephant pixelated"
+        class="question__image"
+      />
+    </div>
 
     <div class="container">
       <div class="box">
@@ -177,28 +191,34 @@
         </div>
         <div class="box__answer">
           <p class="box__answer-text box__answer-text--correct">
-            Correct, this is the hawksbill turtle. 
-            A major threat to hawksbill turtles is the loss of nesting habitat and coral reefs due to coastal development, 
-            rising seas from climate change, and pollution.
+            Correct, this is the hawksbill turtle. A major threat to hawksbill
+            turtles is the loss of nesting habitat and coral reefs due to
+            coastal development, rising seas from climate change, and pollution.
           </p>
         </div>
       </div>
 
       <div class="box">
-        <div class="box__content"><p class="box__content-text">Tortoise</p></div>
+        <div class="box__content">
+          <p class="box__content-text">Tortoise</p>
+        </div>
         <div class="box__answer">
           <p class="box__answer-text">Wrong, this is not a tortoise.</p>
         </div>
       </div>
 
       <div class="box">
-        <div class="box__content"><p class="box__content-text">Armadillo</p></div>
+        <div class="box__content">
+          <p class="box__content-text">Armadillo</p>
+        </div>
         <div class="box__answer">
           <p class="box__answer-text">Wrong, this is not a armadillo.</p>
         </div>
       </div>
       <div class="box">
-        <div class="box__content"><p class="box__content-text">Terrapin</p></div>
+        <div class="box__content">
+          <p class="box__content-text">Terrapin</p>
+        </div>
         <div class="box__answer">
           <p class="box__answer-text">Wrong, this is not a terrapin.</p>
         </div>
@@ -240,7 +260,5 @@
         to learn more about what you can do to help the environment.
       </p>
     </div>
-
-
   </body>
 </html>
