--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <title>Game page</title>
     <link
       rel="stylesheet"
-      href="/assignment-2---css-games-group-8/styles/style.css"
+      href="styles/style.css"
     />
     <script src="script.js" async></script>
   </head>
