--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Main Page</title>
     <link
       rel="stylesheet"
-      href="/assignment-2---css-games-group-8/styles/style.css"
+      href="styles/style.css"
     />
   </head>
 
