--- a/game.html
+++ b/game.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game page</title>
+    <title>Name them all!</title>
     <link
       rel="stylesheet"
       href="styles/style.css"
     />
     <script src="script.js" async></script>
+    <link rel="icon" href="images/goal_15.png">
   </head>
+
   <body class="page">
     <nav class="site-nav">
       <ul class="site-nav__list">
