--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main Page</title>
+    <title>Group 8, UN goal 15</title>
     <link
       rel="stylesheet"
       href="styles/style.css"
     />
+    <link rel="icon" href="images/goal_15.png">
   </head>
 
   <body>
