--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="styles/style.css"
     />
     <link rel="icon" href="images/goal_15.png">
+    <meta name="description" content="This is groups eights page for UNs goal number 15">
   </head>
 
   <body>
