--- a/game.html
+++ b/game.html
@@ -7,11 +7,15 @@
     <title>Name them all!</title>
     <link
       rel="stylesheet"
-      href="styles/style.css"
+      href="./styles/style.css"
     />
     <script src="script.js" async></script>
-    <link rel="icon" href="images/goal_15.png">
-    <meta name="description" content="Can you na,e them all, this game page is where you will try to name all the pixelated animals.">
+
+    <link rel="icon" href="./images/goal_15.png">
+
+    <meta name="description" 
+    content="Can you na,e them all, this game page is where you will try to name all the pixelated animals.">
+    
   </head>
 
   <body class="page">
