--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Group 8, UN goal 15</title>
     <link
       rel="stylesheet"
-      href="styles/style.css"
+      href="./styles/style.css"
     />
-    <link rel="icon" href="images/goal_15.png">
-    <meta name="description" content="This is groups eights page for UNs goal number 15">
+    
+    <link rel="icon"
+    href="./images/goal_15.png">
+
+    <meta name="description"
+    content="This is groups eights page for UNs goal number 15">
+
   </head>
 
   <body>
