--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
 
     <meta name="description" 
     content="Can you na,e them all, this game page is where you will try to name all the pixelated animals.">
-    
+
   </head>
 
   <body class="page">
@@ -119,8 +119,9 @@
         <div class="box__content"><p>Rhino</p></div>
         <div class="box__answer">
           <p class="box__answer-text box__answer-text--correct">
-            This is the Javan rhino. It is critically endangered. Only 67
-            remain.
+            This is the Javan rhino. They have historically lived in south asia, now only remaining in Indonesia. 
+            It is critically endangered. Approximately 67 remain. WWF is working on now removing trees in the national 
+            park where they are to increase breeding rated for the mammals.
           </p>
         </div>
       </div>
