Fixed grammar mistakes

--- a/game.html
+++ b/game.html
@@ -64,7 +64,7 @@
           <p class="box__text">Lion</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a lion.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a lion.</p>
         </div>
       </div>
       <div class="box box--correct">
@@ -83,7 +83,7 @@
           <p class="box__text">Cheetah</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a cheetah.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a cheetah.</p>
         </div>
       </div>
       <div class="box">
@@ -91,7 +91,7 @@
           <p class="box__text">Leopard</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this not a leopard.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a leopard.</p>
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@
           <p class="box__text">Tapir</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a tapir.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a tapir.</p>
         </div>
       </div>
       <div class="box box--correct">
@@ -128,13 +128,13 @@
       <div class="box">
         <div class="box__content"><p>Hippo</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a hippo.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a hippo.</p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p>Walrus</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a walrus.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a walrus.</p>
         </div>
       </div>
     </div>
@@ -153,19 +153,19 @@
       <div class="box">
         <div class="box__content"><p class="box__content-text">Panda</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a panda.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a panda.</p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p class="box__content-text">Rhino</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a rhino.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a rhino.</p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p class="box__content-text">Gorilla</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a gorilla.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a gorilla.</p>
         </div>
       </div>
       <div class="box box--correct">
@@ -211,7 +211,7 @@
           <p class="box__content-text">Tortoise</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a tortoise.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a tortoise.</p>
         </div>
       </div>
 
@@ -220,7 +220,7 @@
           <p class="box__content-text">Armadillo</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a armadillo.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a armadillo.</p>
         </div>
       </div>
       <div class="box">
@@ -228,7 +228,7 @@
           <p class="box__content-text">Terrapin</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong, this is not a terrapin.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a terrapin.</p>
         </div>
       </div>
     </div>
